<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="changePassViewModel"
            type="com.chatimmi.viewmodel.ChangePassViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".usermainfragment.otherfragment.activity.ChangePasswordActivity">

        <include
            android:id="@+id/appBar"
            layout="@layout/app_bar_main" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBar"
            android:overScrollMode="never">


            <RelativeLayout
                android:id="@+id/rlImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/appBar">

                <com.chatimmi.custom.CircleImageView
                    android:id="@+id/ivImages"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:src="@drawable/change_pssword_ico" />

                <TextView

                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivImages"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/create_a_new_password"
                    android:textColor="@color/black_two"
                    android:textSize="18.3sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/llFileds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCurrentPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:text="@string/current_password"
                        android:textColor="#505050"
                        android:textSize="@dimen/_13sdp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCurrentPass"
                        style="@style/AppTheme.EditTextStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@drawable/bg_edit_text"
                        android:drawableEnd="@drawable/ic_lock_icon"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/enter_current_password"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="10dp"
                        android:text="@={changePassViewModel.currentPass}"
                        android:textColorHint="#a5a5a5"
                        android:textSize="@dimen/_13sdp">

                    </com.google.android.material.textfield.TextInputEditText>


                    <TextView
                        style="@style/AppTheme.TextViewStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/montserrat_regular"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:text="@string/new_password"
                        android:textColor="#505050" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNewPass"
                        style="@style/AppTheme.EditTextStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@drawable/bg_edit_text"
                        android:drawableEnd="@drawable/ic_lock_icon"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/enter_new_password"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions|textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="10dp"
                        android:text="@={changePassViewModel.newPass}"
                        android:textColorHint="#a5a5a5">

                    </com.google.android.material.textfield.TextInputEditText>

                    <TextView
                        style="@style/AppTheme.TextViewStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/montserrat_regular"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:text="@string/confirm_password"
                        android:textColor="#505050" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfrimPass"
                        style="@style/AppTheme.EditTextStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@drawable/bg_edit_text"
                        android:drawableEnd="@drawable/ic_lock_icon"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/enter_confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions|textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="10dp"
                        android:text="@={changePassViewModel.confirmPass}"
                        android:textColorHint="#a5a5a5">

                    </com.google.android.material.textfield.TextInputEditText>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llFileds"
                    android:layout_margin="@dimen/_20sdp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnSetPass"
                        style="@style/AppTheme.ButtonMain"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_70sdp"
                        android:onClick="@{() -> changePassViewModel.setPassOnClicked()}"
                        android:text="@string/set_password" />

                    <Button
                        android:id="@+id/btnSignupRed"
                        style="@style/AppTheme.ButtonMain"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_70sdp"
                        android:onClick="@{() -> changePassViewModel.updatePassOnClicked()}"
                        android:text="@string/update_password" />


                </RelativeLayout>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>